# pzem-cli

./: Cargo.toml  README.md
src/: hal_impl.rs  main.rs
