[package]
name = "pzem-cli"
version = "0.1.0"
authors = ["iostapyshyn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pzem004t = { git = "https://github.com/iostapyshyn/pzem004t" }
serialport = "3.3.0"
embedded-hal = "0.2.3"
void = "1.0.2"
nb = "0.1.2"
clap = "2.33.0"
